# Homework2

./: .coverage  .flake8  README.md  pyproject.toml
src/: main.py  shop_models.py
tests/: test_shop_models.py
