[project]
name = "Internet-magazine"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandra Kokh",email = "plahotnikova.al@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY"]
known_first_party = ["src", "logging_config"]
skip = []
skip_glob = []


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'


[tool.flake8]
max-line-length = 119
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    ".git",
    ".mypy_cache",
    "build",
    "dist"
]
